# trading-bot

./: .env.example  .gitignore  LICENSE  README.md  etoro_client.py  pyproject.toml  requirements.txt  test_etoro.py
src/: backtest.py  config.py  fetch_data.py  run.py
src/dashboard/: __init__.py  app.py
src/portfolio/: __init__.py  paper_engine.py
src/strategies/: backtest.py  strategies.py
src/telegram/: bot.py
tests/: test_strategies.py
